--- a/index.html
+++ b/index.html
@@ -281,22 +281,22 @@
       </div>
 
       <div class="category-card" data-category="momos">
-        <div class="card-background" style="background-image: url('https://images.unsplash.com/photo-1625220194771-7ebdea0d06b9?q=80&w=1932&auto=format&fit=crop');"></div>
+        <div class="card-background" style="background-image: url('https://images.unsplash.com/photo-1534422298391-e4f8c172dddb?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bW9tb3N8ZW58MHx8MHx8fDA%3D');"></div>
         <h2 class="category-title">Momos</h2>
       </div>
       
       <div class="category-card" data-category="fries">
-        <div class="card-background" style="background-image: url('https://images.unsplash.com/photo-1576107232684-c7be35d07432?q=80&w=1887&auto=format&fit=crop');"></div>
+        <div class="card-background" style="background-image: url('https://media.istockphoto.com/id/1218213212/photo/homemade-french-fries-with-ketchup-and-mayonnaise-on-rustic-wooden-table.webp?a=1&b=1&s=612x612&w=0&k=20&c=QYwXP0-whoz7Cni7CXNfIyT_pOcRpZUYHqkTYH4MEhA=');"></div>
         <h2 class="category-title">Fries</h2>
       </div>
 
       <div class="category-card" data-category="maggie">
-        <div class="card-background" style="background-image: url('https://images.unsplash.com/photo-1626715049136-474a3501b171?q=80&w=1887&auto=format&fit=crop');"></div>
+        <div class="card-background" style="background-image: url('https://images.unsplash.com/photo-1602833280958-1657662ccc58?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bWFnZ2llfGVufDB8fDB8fHww');"></div>
         <h2 class="category-title">Maggie</h2>
       </div>
 
       <div class="category-card" data-category="wraps">
-        <div class="card-background" style="background-image: url('https://images.unsplash.com/photo-1568205273398-ae9347895f41?q=80&w=1951&auto=format&fit=crop');"></div>
+        <div class="card-background" style="background-image: url('https://plus.unsplash.com/premium_photo-1664478294917-c11274b9ce79?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8d3JhcHN8ZW58MHx8MHx8fDA%3D');"></div>
         <h2 class="category-title">Wraps</h2>
       </div>
 
