--- a/index.html
+++ b/index.html
@@ -415,6 +415,8 @@
         <div class="category-card" data-category="wraps"><div class="card-background" style="background-image: url('https://plus.unsplash.com/premium_photo-1664478294917-c11274b9ce79?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8d3JhcHN8ZW58MHx8MHx8fDA%3D');"></div><h2 class="category-title">Wraps</h2></div>
         <div class="category-card" data-category="shakes"><div class="card-background" style="background-image: url('https://images.unsplash.com/photo-1572490122747-3968b75cc699?q=80&w=1887&auto=format&fit=crop');"></div><h2 class="category-title">Shakes</h2></div>
         <div class="category-card" data-category="beverages"><div class="card-background" style="background-image: url('https://images.unsplash.com/photo-1551030173-122aabc4489c?q=80&w=1887&auto=format&fit=crop');"></div><h2 class="category-title">Coffee</h2></div>
+        <div class="category-card" data-category="sandwich"><div class="card-background" style="background-image: url('https://images.unsplash.com/photo-1539252554453-80ab65ce3586?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8c2FuZHdpY2h8ZW58MHx8MHx8fDA%3D');"></div><h2 class="category-title">Sandwich</h2></div>
+
     </main>
 
     <div class="review-section">
@@ -456,7 +458,8 @@
         <div id="burger-items">
             <h3 class="modal-title">Burgers</h3>
             <div class="menu-item"><div class="item-header"><div class="item-name">Veg Burger</div><div class="item-price">₹60</div></div><div class="item-desc">A classic burger with a mixed vegetable patty, lettuce, and tomato.</div></div>
-            <div class="menu-item"><div class="item-header"><div class="item-name">Veg Cheese Burger</div><div class="item-price">₹130</div></div><div class="item-desc">Our veg burger with a generous slice of melted cheese.</div></div>
+            <div class="menu-item"><div class="item-header"><div class="item-name">Veg Cheese Burger</div><div class="item-price">₹70</div></div><div class="item-desc">Our veg burger with a generous slice of melted cheese.</div></div>
+            <div class="menu-item"><div class="item-header"><div class="item-name">Veg Double Decker Burger</div><div class="item-price">₹130</div></div><div class="item-desc">Loaded with double veg patties, cheese, lettuce & special sauces.</div></div>
             <div class="menu-item"><div class="item-header"><div class="item-name">Aloo Tikki Burger</div><div class="item-price">₹70</div></div><div class="item-desc">Crispy potato patty burger with Indian spices and tangy sauces.</div></div>
             <div class="menu-item"><div class="item-header"><div class="item-name">Aloo Tikki Cheese Burger</div><div class="item-price">₹80</div></div><div class="item-desc">The favorite aloo tikki burger, now with cheese!</div></div>
             <div class="menu-item"><div class="item-header"><div class="item-name">Aloo Tikki Double Decker</div><div class="item-price">₹140</div></div><div class="item-desc">Double the patty, double the fun. For the truly hungry.</div></div>
@@ -465,25 +468,58 @@
             <div class="menu-item"><div class="item-header"><div class="item-name">Paneer Double Decker</div><div class="item-price">₹170</div></div><div class="item-desc">Two layers of our signature grilled paneer patty.</div></div>
         </div>
         <div id="pizza-items">
-            <h3 class="modal-title">Pizza</h3>
-            <div class="menu-item"><div class="item-header"><div class="item-name">Margherita Pizza</div><div class="item-price">₹90</div></div></div>
-            <div class="menu-item"><div class="item-header"><div class="item-name">Veg Classic Pizza</div><div class="item-price">₹110</div></div></div>
-            <div class="menu-item"><div class="item-header"><div class="item-name">American Corn Cheese Pizza</div><div class="item-price">₹110</div></div></div>
-            <div class="menu-item"><div class="item-header"><div class="item-name">Veg Cheese Burst Pizza</div><div class="item-price">₹130</div></div></div>
-            <div class="menu-item"><div class="item-header"><div class="item-name">Paneer Capsicum Pizza</div><div class="item-price">₹120</div></div></div>
-            <div class="menu-item"><div class="item-header"><div class="item-name">Paneer Makhani Pizza</div><div class="item-price">₹140</div></div></div>
-            <div class="menu-item"><div class="item-header"><div class="item-name">Paneer Tandoori Pizza</div><div class="item-price">₹140</div></div></div>
-        </div>
+    <h3 class="modal-title">Pizza</h3>
+
+    <div class="menu-item">
+        <div class="item-header"><div class="item-name">Margherita Pizza</div><div class="item-price">₹90</div></div>
+        <div class="item-desc">Classic cheese pizza with fresh tomato sauce and mozzarella.</div>
+    </div>
+
+    <div class="menu-item">
+        <div class="item-header"><div class="item-name">Veg Classic Pizza</div><div class="item-price">₹110</div></div>
+        <div class="item-desc">Loaded with fresh veggies and herbs on a crispy crust.</div>
+    </div>
+
+    <div class="menu-item">
+        <div class="item-header"><div class="item-name">American Corn Cheese Pizza</div><div class="item-price">₹110</div></div>
+        <div class="item-desc">Sweet corn blended with creamy cheese on a soft crust.</div>
+    </div>
+
+    <div class="menu-item">
+        <div class="item-header"><div class="item-name">Veg Cheese Burst Pizza</div><div class="item-price">₹130</div></div>
+        <div class="item-desc">Cheese-filled crust with rich veggie toppings and extra cheese.</div>
+    </div>
+
+    <div class="menu-item">
+        <div class="item-header"><div class="item-name">Paneer Capsicum Pizza</div><div class="item-price">₹120</div></div>
+        <div class="item-desc">Flavorful paneer chunks with crunchy capsicum and melted cheese.</div>
+    </div>
+
+    <div class="menu-item">
+        <div class="item-header"><div class="item-name">Paneer Makhani Pizza</div><div class="item-price">₹140</div></div>
+        <div class="item-desc">Rich and creamy makhani sauce topped with soft paneer cubes.</div>
+    </div>
+
+    <div class="menu-item">
+        <div class="item-header"><div class="item-name">Paneer Tandoori Pizza</div><div class="item-price">₹140</div></div>
+        <div class="item-desc">Spicy tandoori paneer with cheese on a smoky, crispy base.</div>
+    </div>
+</div>
+
         <div id="pasta-items">
             <h3 class="modal-title">Pasta</h3>
             <div class="menu-item"><div class="item-header"><div class="item-name">White Sauce Pasta</div><div class="item-price">₹110</div></div><div class="item-desc">Creamy and rich pasta in a classic béchamel sauce with exotic veggies.</div></div>
             <div class="menu-item"><div class="item-header"><div class="item-name">Cheesy White Sauce Pasta</div><div class="item-price">₹130</div></div><div class="item-desc">Our creamy white sauce pasta, baked with extra cheese on top.</div></div>
             <div class="menu-item"><div class="item-header"><div class="item-name">Red Sauce Pasta</div><div class="item-price">₹110</div></div><div class="item-desc">A tangy and savory pasta in a tomato and basil sauce.</div></div>
             <div class="menu-item"><div class="item-header"><div class="item-name">Cheesy Red Sauce Pasta</div><div class="item-price">₹130</div></div><div class="item-desc">Tangy red sauce pasta, baked with a layer of mozzarella.</div></div>
+            <div class="menu-item"><div class="item-header"><div class="item-name">Creamy Peri Peri Pasta</div><div class="item-price">₹110</div></div><div class="item-desc">A rich, velvety pasta tossed in spicy Peri Peri sauce and cream for a smooth, fiery taste.</div></div>
+            <div class="menu-item"><div class="item-header"><div class="item-name">Cheesy Peri Peri Pasta</div><div class="item-price">₹130</div></div><div class="item-desc">A bold fusion of Peri Peri spices and melted cheese, delivering a spicy and gooey indulgence.</div></div>
+
         </div>
         <div id="momos-items">
             <h3 class="modal-title">Momos</h3>
             <div class="menu-item"><div class="item-header"><div class="item-name">Veg Steam Momos</div><div class="item-price">₹50</div></div></div>
+            <div class="menu-item"><div class="item-header"><div class="item-name">Veg Fried Momos</div><div class="item-price">₹50</div></div></div>
             <div class="menu-item"><div class="item-header"><div class="item-name">Veg Kurkure Momos</div><div class="item-price">₹75</div></div></div>
             <div class="menu-item"><div class="item-header"><div class="item-name">Veg Peri-Peri Momos</div><div class="item-price">₹75</div></div></div>
             <div class="menu-item"><div class="item-header"><div class="item-name">Veg Lava Momos</div><div class="item-price">₹80</div></div></div>
@@ -571,10 +607,25 @@
             <div class="menu-item"><div class="item-header"><div class="item-name">Ice-Cream Add-on</div><div class="item-price">₹15</div></div></div>
             <div class="menu-item"><div class="item-header"><div class="item-name">Crush Add-on</div><div class="item-price">₹15</div></div></div>
         </div>
+
+        <div id="sandwich-items">
+            <h3 class="modal-title">Sandwich</h3>
+            <div class="menu-item"><div class="item-header"><div class="item-name">Bread Butter</div><div class="item-price">₹40</div></div></div>
+            <div class="menu-item"><div class="item-header"><div class="item-name">Veg Grilled Sandwich</div><div class="item-price">₹70</div></div></div>
+            <div class="menu-item"><div class="item-header"><div class="item-name">Veg Cheese Grilled Sandwich</div><div class="item-price">₹75</div></div></div>
+            <div class="menu-item"><div class="item-header"><div class="item-name">Cheese Corn Sandwich</div><div class="item-price">₹65</div></div></div>
+            <div class="menu-item"><div class="item-header"><div class="item-name">Cheese Sandwich</div><div class="item-price">₹60</div></div></div>
+            <div class="menu-item"><div class="item-header"><div class="item-name">Chocolate Sandwich</div><div class="item-price">₹65</div></div></div>
+            <div class="menu-item"><div class="item-header"><div class="item-name">Paneer Tandoori Sandwich</div><div class="item-price">₹80</div></div></div>
+            <div class="menu-item"><div class="item-header"><div class="item-name">Paneer Makhni Sandwich</div><div class="item-price">₹80</div></div></div>
+            <div class="menu-item"><div class="item-header"><div class="item-name">Cheese Chilly Sandwich</div><div class="item-price">₹75</div></div></div>
+
+
+        </div>
   </div>
 
 
-  <script>
+ <script>
     document.addEventListener('DOMContentLoaded', function () {
         const categoryCards = document.querySelectorAll('.category-card');
         const menuModal = document.getElementById('menu-modal');
@@ -612,6 +663,10 @@
 
         function openMenuModal(category) {
             const sourceDiv = document.getElementById(`${category}-items`);
+            if (!sourceDiv) {
+                console.error(`Menu content for category '${category}' not found.`);
+                return;
+            }
             const sourceTitle = sourceDiv.querySelector('.modal-title').textContent;
             const sourceItems = sourceDiv.querySelectorAll('.menu-item');
             let itemsHTML = '';
@@ -704,7 +759,10 @@
             }
         }
 
-        categoryCards.forEach(card => card.addEventListener('click', () => openMenuModal(card.dataset.category)));
+        categoryCards.forEach(card => {
+            card.addEventListener('click', () => openMenuModal(card.dataset.category));
+        });
+
         menuModalBody.addEventListener('click', e => {
             const item = e.target.closest('.menu-item');
             if (item) addItemToOrder(item);
@@ -742,6 +800,6 @@
             }
         });
     });
-  </script>
+</script>
 </body>
 </html>
