--- a/index.html
+++ b/index.html
@@ -79,6 +79,23 @@
       .modal-title { font-size: 1.8rem; }
     }
 
+    body {
+    font-family: 'Montserrat', sans-serif;
+    color: var(--text);
+    background-color: var(--light-bg);
+    line-height: 1.6;
+    padding-bottom: 100px; /* Adds space at the bottom for the floating button */
+}
+
+footer {
+    text-align: center;
+    padding: 30px 20px;
+    margin-top: 40px;
+    border-top: 1px solid var(--accent);
+    background-color: var(--accent); /* Adds a subtle background */
+    border-radius: 12px;
+}
+
     .pay-now-button {
     display: inline-block;
     margin-top: 20px;
@@ -121,16 +138,12 @@
         </a>
     </div>
 
-    <footer>
-      <p>&copy; 2025 PassTime Café. All rights reserved.</p>
-      <p style="margin-top: 10px; font-size: 0.8rem; opacity: 0.8;">
-          Project Lead & Developer: Neha Gurav | Year: 2025
-
-
-
-        
-      </p>
-    </footer>
+  <footer>
+    <p>&copy; 2025 PassTime Café. All rights reserved.</p>
+    <p style="margin-top: 10px; font-size: 0.8rem; opacity: 0.8;">
+        Project Lead & Developer: Neha Gurav | Year: 2025
+    </p>
+</footer>
   </div>
 
   <div id="menu-modal" class="modal">
