--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ footer {
         <div class="category-card" data-category="momos"><div class="card-background" style="background-image: url('https://images.unsplash.com/photo-1534422298391-e4f8c172dddb?w=600&auto=format&fit=crop&q=60');"></div><h2 class="category-title">Momos</h2></div>
         <div class="category-card" data-category="fries"><div class="card-background" style="background-image: url('https://media.istockphoto.com/id/1218213212/photo/homemade-french-fries-with-ketchup-and-mayonnaise-on-rustic-wooden-table.webp?a=1&b=1&s=612x612&w=0&k=20&c=QYwXP0-whoz7Cni7CXNfIyT_pOcRpZUYHqkTYH4MEhA=');"></div><h2 class="category-title">Fries</h2></div>
         <div class="category-card" data-category="maggie"><div class="card-background" style="background-image: url('https://images.unsplash.com/photo-1602833280958-1657662ccc58?w=600&auto=format&fit=crop&q=60');"></div><h2 class="category-title">Maggie</h2></div>
-        <div class="category-card" data-category="wraps"><div class="card-background" style="background-image: url('https://plus.unsplash.com/premium_photo-1664478294917-c11274b9ce79?w=600&auto=format&fit=crop&q=60');"></div><h2 class="category-title">Wraps</h2></div>
+        <div class="category-card" data-category="wraps"><div class="card-background" style="background-image: url('https://plus.unsplash.com/premium_photo-1664478294917-c11274b9ce79?w=600&auto=format&fit=crop&q=60');"></div><h2 class="category-title">Wraps & Toast</h2></div>
         <div class="category-card" data-category="shakes"><div class="card-background" style="background-image: url('https://images.unsplash.com/photo-1572490122747-3968b75cc699?q=80&w=1887&auto=format&fit=crop');"></div><h2 class="category-title">Shakes</h2></div>
         <div class="category-card" data-category="coffee"><div class="card-background" style="background-image: url('https://images.unsplash.com/photo-1551030173-122aabc4489c?q=80&w=1887&auto=format&fit=crop');"></div><h2 class="category-title">Coffee & Tea</h2></div>
     </main>
@@ -217,7 +217,7 @@ footer {
         <div id="momos-items">
             <h3 class="modal-title">Momos</h3>
             <div class="menu-item"><div class="item-header"><div class="item-name">Veg Steam Momos</div><div class="item-price">₹50</div></div><div class="item-desc">Classic steamed dumplings with a savory vegetable filling.</div></div>
-            <div class="menu-item"><div class="item-header"><div class="item-name">Veg Fried Momos</div><div class="item-price">₹50</div></div><div class="item-desc">Crispy fried dumplings with a delicious vegetable filling.</div></div>
+            <div class="menu-item"><div class="item-header"><div class="item-name">Veg Fried Momos</div><div class="item-price">₹60</div></div><div class="item-desc">Crispy fried dumplings with a delicious vegetable filling.</div></div>
             <div class="menu-item"><div class="item-header"><div class="item-name">Veg Kurkure Momos</div><div class="item-price">₹75</div></div><div class="item-desc">An extra crispy version of our classic fried momos.</div></div>
             <div class="menu-item"><div class="item-header"><div class="item-name">Veg Peri-Peri Momos</div><div class="item-price">₹75</div></div><div class="item-desc">Fried momos tossed in a tangy and spicy peri-peri sauce.</div></div>
             <div class="menu-item"><div class="item-header"><div class="item-name">Veg Lava Momos</div><div class="item-price">₹80</div></div><div class="item-desc">Momos served with a special spicy and cheesy lava sauce.</div></div>
