--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   </div>
   
   <div id="cart-button" class="cart-button">
-      <span id="cart-emoji">🍽️</span> My Order <span id="cart-count" class="cart-count">0</span>
+      <span id="cart-emoji">🍽️</span> Your Total Bill <span id="cart-count" class="cart-count">0</span>
   </div>
 
   <div class="hidden-content">
@@ -467,3 +467,4 @@ document.addEventListener('DOMContentLoaded', function () {
 </script>
 </body>
 </html>
+
